<?xml version="1.0"?>
<project
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>com.antbean</groupId>
		<artifactId>antbean-all</artifactId>
		<version>0.0.1-SNAPSHOT</version>
	</parent>
	<artifactId>antbean-task</artifactId>
	<packaging>war</packaging>
	<name>antbean-task Maven Webapp</name>
	<url>http://maven.apache.org</url>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
		</dependency>

		<dependency>
			<groupId>com.antbean</groupId>
			<artifactId>antbean-biz</artifactId>
		</dependency>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>servlet-api</artifactId>
		</dependency>
		<dependency>
			<groupId>org.eclipse.jetty</groupId>
			<artifactId>jetty-server</artifactId>
		</dependency>

		<!-- ↓↓↓↓↓↓↓↓↓↓↓↓↓↓ jfinal与quartz整合需要的jar ↓↓↓↓↓↓↓↓↓↓↓↓↓↓ -->
		<!-- <dependency> <groupId>org.quartz-scheduler</groupId> <artifactId>quartz</artifactId> 
			</dependency> -->
		<dependency>
			<groupId>cn.dreampie</groupId>
			<artifactId>jfinal-quartz</artifactId>
		</dependency>
		<!-- <dependency> <groupId>cn.dreampie</groupId> <artifactId>jfinal-utils</artifactId> 
			</dependency> -->
		<!-- <dependency> <groupId>com.google.code.google-collections</groupId> 
			<artifactId>google-collect</artifactId> </dependency> -->
		<!-- <dependency>
			<groupId>org.objectweb.asm</groupId>
			<artifactId>org.objectweb.asm</artifactId>
		</dependency> -->
		<!-- ↑↑↑↑↑↑↑↑↑↑↑↑↑↑ jfinal与quartz整合需要的jar ↑↑↑↑↑↑↑↑↑↑↑↑↑↑ -->

		<!-- ↓↓↓↓↓↓↓↓↓↓↓↓↓↓ Log ↓↓↓↓↓↓↓↓↓↓↓↓↓↓ -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
		</dependency>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
		</dependency>
		<!-- ↑↑↑↑↑↑↑↑↑↑↑↑↑↑ Log ↑↑↑↑↑↑↑↑↑↑↑↑↑↑ -->
	</dependencies>
	<build>
		<finalName>antbean-task</finalName>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.2</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.mortbay.jetty</groupId>
				<artifactId>jetty-maven-plugin</artifactId>
				<configuration>
					<jvmArgs>-XX:PermSize=128M -XX:MaxPermSize=256M</jvmArgs>
					<webApp>
						<contextPath>/</contextPath>
					</webApp>
					<scanIntervalSeconds>5</scanIntervalSeconds>
					<stopKey>antbeantask</stopKey>
					<stopPort>9991</stopPort>
					<connectors>
						<connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
							<port>81</port>
							<maxIdleTime>60000</maxIdleTime>
						</connector>
					</connectors>
					<requestLog implementation="org.eclipse.jetty.server.NCSARequestLog">
						<filename>target/access.log</filename>
						<retainDays>90</retainDays>
						<append>false</append>
						<extended>false</extended>
						<logTimeZone>GMT</logTimeZone>
					</requestLog>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
